# colorectal-cancer-prediction

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ruff.yml
artifacts/processed_data/: X_test.pkl  scaler.pkl  y_test.pkl  y_train.pkl
config/: paths.py
kubeflow_pipeline/: pipeline.py
src/: logger.py  processing.py  training.py
static/: style.css
templates/: index.html
