[project]
name = "colorectal-cancer-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "kfp>=2.16.0",
    "mlflow>=3.10.1",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
]
